--- a/templates/bank_account_holder_detail.html
+++ b/templates/bank_account_holder_detail.html
@@ -36,6 +36,7 @@
                     </tr>
                 </tbody>
             </table>
+            
 
             <h3>Holder Information</h3>
             <table class="table table-striped">
@@ -88,7 +89,24 @@
       	</div>
 
           <div class="col-md-6">
-            
+            <h3>Bank Account Holder Information</h3>
+<table class="table table-striped">
+    <tbody>
+        <tr>
+            <th scope="row">Name</th>
+            <td>{{ holder.name }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Alias</th>
+            <td>{{ holder.alias }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Account Type</th>
+            <td>{{ holder.get_account_type_display }}</td>
+        </tr>
+    </tbody>
+</table>
+
             <h3>Bank Configuration</h3>
             <table class="table table-striped">
                 <tbody>
