--- a/templates/bank_account_holder_edit.html
+++ b/templates/bank_account_holder_edit.html
@@ -99,7 +99,7 @@
             </div>
         </div>
 
-        <input type="submit" value="Save" class="btn btn-primary">
+        <input type="submit" value="Save" class="btn btn-outline-info text-grey mb-3">
     </form>
 
     {# Add custom styles to change the background color of select elements #}
