--- a/templates/bank_account_holder_detail.html
+++ b/templates/bank_account_holder_detail.html
@@ -38,7 +38,7 @@
             </table>
             
 
-            <h3>Holder Information</h3>
+            <h3>Tax Information</h3>
             <table class="table table-striped">
                 <tbody>
                     <tr>
