--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -65,8 +65,6 @@
                 {% endfor %}
             </div> 
         </div> 
-
-        <!-- Additional code -->
         <div class="row">
             <div class="col-md-6">
                 <h2>Tax Registration Form</h2> 
@@ -117,7 +115,7 @@
 
 <!-- JavaScript code to handle the change event for the registration_type field -->
 <script>
-    // Get references to the registration type and GST number fields
+   // Get references to the registration type and GST number fields
 let registrationTypeField = document.querySelector('#id_registration_type');
 let gstNumberField = document.querySelector('#id_gstin_un');
 
@@ -130,9 +128,11 @@ function toggleGstNumberField() {
     if (registrationType === 'consumer' || registrationType === 'unregistered') {
         gstNumberField.style.display = 'none';
         gstNumberLabel.style.display = 'none';
+        gstNumberField.required = false; // Remove the required attribute
     } else {
         gstNumberField.style.display = '';
         gstNumberLabel.style.display = '';
+        gstNumberField.required = true; // Add the required attribute back
     }
 }
 
