--- a/templates/bank_account_holder_edit.html
+++ b/templates/bank_account_holder_edit.html
@@ -98,8 +98,14 @@
                 {% endfor %}
             </div>
         </div>
-
-        <input type="submit" value="Save" class="btn btn-outline-info text-grey mb-3">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="termsCheckbox" name="terms" required>
+                <label class="form-check-label" for="termsCheckbox">Agree to terms and conditions</label>
+            </div>
+            <input type="submit" value="Save" class="btn btn-outline-info text-grey rounded-pill btn-lg">
+        </div>
+        
     </form>
 
     {# Add custom styles to change the background color of select elements #}
