--- a/templates/bank_account_list.html
+++ b/templates/bank_account_list.html
@@ -111,7 +111,7 @@ left: 50%; */
                             </div>
                             <div class="col-md-4" style="width: 100%; margin-top: 8px;">
                                 <div class="dropdown">
-                                    <button type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown" style="width: 50%; font-size: 14px;">
+                                    <button type="button" class="btn btn-outline-info dropdown-toggle text-grey" data-toggle="dropdown" style="width: 50%; font-size: 14px;">
                                         Filter by
                                     </button>
                                     <div class="dropdown-menu">
@@ -122,7 +122,7 @@ left: 50%; */
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <a href="{% url 'bank_account_holder_create' %}" id="myBtn" class="btn btn-outline-info text-grey" style="margin-top: 8px; width: 50%; font-size: 14px;" role="button">New</a>
+                                <a href="{% url 'bank_account_holder_create' %}" id="myBtn"  class="btn btn-outline-info text-grey fa fa-plus" style="margin-top: 8px; width: 50%; font-size: 14px;" role="button">New</a>
                             </div>
                         </div>
                     
