--- a/templates/bank_account_holder_create.html
+++ b/templates/bank_account_holder_create.html
@@ -108,12 +108,20 @@
 
     </div>
         <!-- Submit button -->
-        <input type="submit" value="Submit" class="btn btn-outline-info text-grey mb-3">
+        <div class="d-flex justify-content-between align-items-center">
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="termsCheckbox" name="terms" required>
+                <label class="form-check-label" for="termsCheckbox">Agree to terms and conditions</label>
+            </div>
+            <input type="submit" value="Save" class="btn btn-outline-info text-grey rounded-pill btn-lg">
+        </div>
+        
+
     </form> 
 </div>
 
 
-<!-- Your existing template code -->
+
 
 <!-- JavaScript code to handle the change event for the registration_type field -->
 <script>
